# ssga-meta-labeling

./: .gitignore  AGENTS.md  Benchmark.py  DECISIONS.md  M102225.html  M1_022225.py  Mania Hunter.py  NEXT_TASK.md  PROJECT_STATE.md  README.md  Trend Aware.py  backtest_results_5indicator.csv  latest.py  primary_model_one_file.py  pyproject.toml  requirements.txt
primary_model/: .gitignore  AGENTS.md  Benchmark (2).py  Cristhian.txt  FULL_PROJECT_RUN_SUMMARY.md  INSTRUCTIONS.txt  Joubert.txt  Makefile  PrimaryV1_Executive_Briefing.pptx  PrimaryV1_Executive_Briefing_updated.pptx  QauntAtoZ.txt  README.md  README_primary_model.md  Raviv.txt  Samweg.txt  Trend Aware (1) (1).py  cli.py  extract_pdf.py  instructions.txt  monthly_allocations_enhanced.csv  presentation.html  primary_model_joubert_quantatoz.py  primary_model_one_file.py  primary_model_unified.py  pyproject.toml  requirements-dev.txt  requirements.txt  strategy_returns_enhanced.csv
primary_model/artifacts/: README.md
primary_model/backtest/: __init__.py  engine.py  reporting.py
primary_model/configs/: base.yaml
primary_model/data/: README.md  __init__.py  cleaner.py  loader.py
primary_model/docs/: architecture.md  model_spec_primary_v1_1_baseline.md  operator_runbook.md
primary_model/portfolio/: __init__.py  weights.py
primary_model/qc/: __init__.py  reports.py
primary_model/reports/: M1_Backtest_Guide_v2 (1).html  backtest_results.csv  benchmarks_summary.csv  data_qc.html  final_presentation.html  final_presentation_v2.html  model_comparison_dashboard.html  primary_jq_bias_qc.csv  primary_jq_data_qc.csv  primary_jq_oos_gate.csv  (+9 more)
(+304 files in other folders)
