[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primary-model"
version = "0.1.0"
description = "Primary model research/backtesting pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Primary Model Team" }]
license = { text = "Proprietary" }
dependencies = [
  "numpy>=1.26,<3.0",
  "pandas>=2.2,<3.0",
  "matplotlib>=3.8,<4.0",
  "openpyxl>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
primary-model = "cli:main"

[tool.setuptools]
py-modules = ["cli"]
packages = ["backtest", "data", "portfolio", "qc", "signals"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
